--- a/app/src/main/res/layout/activity_lupa_password.xml
+++ b/app/src/main/res/layout/activity_lupa_password.xml
@@ -97,11 +97,11 @@
         android:id="@+id/tvWarningEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email salah"
+        android:visibility="invisible"
         android:paddingStart="10dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="5dp"
-        android:textColorHint="@color/warning_font"
+        android:textColor="@color/warning_font"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etEmail"/>
 
@@ -119,7 +119,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:enabled="false"
-        />
+        android:enabled="false"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
