--- a/app/src/main/res/layout/activity_lupa_password_pw.xml
+++ b/app/src/main/res/layout/activity_lupa_password_pw.xml
@@ -85,6 +85,7 @@
         android:hint="Kata sandi baru"
         android:textColor="@color/black"
         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@$#"
+        android:maxLength="16"
         android:textSize="12sp"
         android:fontFamily="@font/dm_sans_medium"
         android:paddingStart="10dp"
@@ -95,6 +96,15 @@
         android:layout_marginStart="24dp"
         android:background="@drawable/transparent_bg_button"/>
 
+    <TextView
+        android:id="@+id/tvWarningKataSandi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/warning_font"
+        android:visibility="invisible"
+        android:layout_marginHorizontal="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etKatasandi"/>
     <TextView
         android:id="@+id/tvKonfirmasiKatasandi"
         android:layout_width="wrap_content"
@@ -126,6 +136,7 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/transparent_bg_button"
         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@$#"
+        android:maxLength="16"
         android:fontFamily="@font/dm_sans_medium"
         android:hint="Konfirmasi kata sandi baru"
         android:paddingStart="10dp"
@@ -139,7 +150,7 @@
         android:id="@+id/tvWarningKataSandiBaru"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kata sandi terdiri dari 8 - 16"
+        android:text="Kata sandi harus sama"
         android:textColor="@color/warning_font"
         android:layout_marginStart="30dp"
         android:layout_marginTop="5dp"
