--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -45,7 +45,7 @@
     <TextView
         android:layout_width="313dp"
         android:layout_height="wrap_content"
-        android:text="@string/pin_evilz_ini"
+        android:text="Pin Evilz ini digunakan untuk proses pembayaran/transfer pada TransEvilz. Gunakan kombinasi 6 angka tanpa huruf dan simbol"
         android:textColor="@color/warna_secondary_font"
         android:layout_marginTop="44dp"
         android:layout_marginStart="5dp"
@@ -73,22 +73,46 @@
         app:layout_constraintStart_toEndOf="@+id/tvBuatPin"
         app:layout_constraintTop_toBottomOf="@+id/ivInfo" />
 
-    <EditText
-        android:id="@+id/etPin"
+    <LinearLayout
+        android:id="@+id/linearlayoutPin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:hint="Masukkan 6 digit Pin"
-        android:textColorHint="@color/warna_secondary_font"
-        android:inputType="number"
-        android:maxLength="6"
-        android:textColor="@color/black"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="24dp"
         android:background="@drawable/transparent_bg_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBuatPin"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvBuatPin">
+
+        <EditText
+            android:id="@+id/etPin"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:hint="Masukkan 6 digit Pin"
+            android:textColorHint="@color/warna_secondary_font"
+            android:inputType="number"
+            android:maxLength="6"
+            android:textColor="@color/black"
+            android:background="@drawable/transparent_bg_button"/>
+
+        <ImageButton
+            android:id="@+id/ibShowPin"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/eye_off"
+            android:background="@drawable/transparent_bg_button"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvWarningPin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Anda harus mengisi bagian ini"
+        android:textColor="@color/warning_font"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearlayoutPin"
+        android:layout_marginHorizontal="40dp"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/tvKonfirmasiPin"
@@ -111,22 +135,45 @@
         app:layout_constraintStart_toEndOf="@id/tvKonfirmasiPin"
         app:layout_constraintTop_toBottomOf="@+id/tvBuatPin"/>
 
-    <EditText
-        android:id="@+id/etKonfirmasiPin"
+    <LinearLayout
+        android:id="@+id/linearlayoutKonfirmasiPin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:hint="Masukkan 6 digit Pin yang telah dibuat"
-        android:textColorHint="@color/warna_secondary_font"
-        android:inputType="number"
-        android:maxLength="6"
-        android:background="@drawable/transparent_bg_button"
-        android:textColor="@color/black"
-        android:layout_marginTop="100dp"
+        android:layout_height="50dp"
+        android:layout_marginVertical="5dp"
+        android:orientation="horizontal"
         android:layout_marginHorizontal="24dp"
+        android:background="@drawable/transparent_bg_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBuatPin"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvKonfirmasiPin">
 
+        <EditText
+            android:id="@+id/etKonfirmasiPin"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:hint="Masukkan 6 digit Pin yang telah dibuat"
+            android:textColorHint="@color/warna_secondary_font"
+            android:inputType="number"
+            android:maxLength="6"
+            android:textColor="@color/black"
+            android:background="@drawable/transparent_bg_button"/>
+
+        <ImageButton
+            android:id="@+id/ibShowKonfirmasiPin"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/eye_off"
+            android:background="@drawable/transparent_bg_button"/>
+    </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvWarningKonfirmasiPin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="40dp"
+            android:textColor="@color/warning_font"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearlayoutKonfirmasiPin"/>
     <Button
         android:id="@+id/btnKirimPin"
         android:layout_width="match_parent"
@@ -138,6 +185,6 @@
         android:layout_marginTop="300dp"
         android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etKonfirmasiPin"
+        app:layout_constraintTop_toBottomOf="@+id/linearlayoutKonfirmasiPin"
         android:enabled="false"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
