--- a/app/src/main/res/layout/activity_international_transfer.xml
+++ b/app/src/main/res/layout/activity_international_transfer.xml
@@ -85,19 +85,53 @@
                 app:layout_constraintStart_toEndOf="@+id/ivAsalTf"
                 app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
 
-            <EditText
-                android:id="@+id/etDropAsal"
+            <TextView
+                android:id="@+id/defaultIdr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="IDR"
-                android:layout_marginStart="21dp"
+                android:text="IDR"
+                android:layout_marginStart="12dp"
                 android:textSize="16sp"
                 android:inputType="number"
                 android:fontFamily="@font/dm_sans_medium"
+                android:textColorHint="@color/warna_grey_font"
                 android:textColor="@color/warna_grey_font"
                 android:background="@drawable/rounded_bg_sechond"
                 app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
                 app:layout_constraintStart_toEndOf="@id/spinner_asal"
+                app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
+
+            <EditText
+                android:id="@+id/etDropAsal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint=""
+                android:layout_marginStart="12dp"
+                android:textSize="16sp"
+                android:inputType="number"
+                android:fontFamily="@font/dm_sans_medium"
+                android:textColorHint="@color/warna_grey_font"
+                android:textColor="@color/warna_grey_font"
+                android:background="@drawable/rounded_bg_sechond"
+                app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
+                app:layout_constraintStart_toEndOf="@id/defaultIdr"
+                app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
+
+            <EditText
+                android:id="@+id/tvResultDropAsal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint=""
+                android:layout_marginStart="12dp"
+                android:textSize="16sp"
+                android:inputType="number"
+                android:visibility="gone"
+                android:fontFamily="@font/dm_sans_medium"
+                android:textColorHint="@color/warna_grey_font"
+                android:textColor="@color/warna_grey_font"
+                android:background="@drawable/rounded_bg_sechond"
+                app:layout_constraintTop_toTopOf="@id/constrainPilihNegara"
+                app:layout_constraintStart_toEndOf="@id/etDropAsal"
                 app:layout_constraintBottom_toBottomOf="@id/constrainPilihNegara"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -125,9 +159,40 @@
                 app:layout_constraintStart_toStartOf="@+id/constrainTujuanNegara"
                 app:layout_constraintBottom_toBottomOf="@id/constrainTujuanNegara"/>
 
+            <TextView
+                android:id="@+id/tvDropTujuan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:textSize="16sp"
+                android:text=""
+                android:inputType="number"
+                android:fontFamily="@font/dm_sans_medium"
+                android:textColor="@color/warna_grey_font"
+                app:layout_constraintTop_toTopOf="@id/constrainTujuanNegara"
+                app:layout_constraintStart_toEndOf="@id/spinner_tujuan"
+                app:layout_constraintBottom_toBottomOf="@id/constrainTujuanNegara"/>
+
 
             <TextView
                 android:id="@+id/etDropTujuan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="21dp"
+                android:textSize="16sp"
+                android:text=""
+                android:visibility="gone"
+                android:inputType="number"
+                android:fontFamily="@font/dm_sans_medium"
+                android:textColor="@color/warna_grey_font"
+                android:background="@drawable/rounded_bg_sechond"
+                app:layout_constraintTop_toTopOf="@id/constrainTujuanNegara"
+                app:layout_constraintStart_toEndOf="@id/tvDropTujuan"
+                app:layout_constraintBottom_toBottomOf="@id/constrainTujuanNegara"/>
+
+
+            <TextView
+                android:id="@+id/etResultCurrencyTujuan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="21dp"
@@ -138,7 +203,7 @@
                 android:textColor="@color/warna_grey_font"
                 android:background="@drawable/rounded_bg_sechond"
                 app:layout_constraintTop_toTopOf="@id/constrainTujuanNegara"
-                app:layout_constraintStart_toEndOf="@id/spinner_tujuan"
+                app:layout_constraintStart_toEndOf="@id/etDropTujuan"
                 app:layout_constraintBottom_toBottomOf="@id/constrainTujuanNegara"/>
 
 
